--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restaurant-app",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://goal651.github.io/restaurant-website/",
